--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="buttons">
         <button class="rock">ROCK</button>
         <button class="paper">PAPER</button>
-        <button class="scissor">SCISSOR</button>
+        <button class="scissors">SCISSOR</button>
     </div>
 
     <script src="rps.js"></script>
