added logic for game

--- a/index.html
+++ b/index.html
@@ -27,10 +27,17 @@
         </div>
     </div>
     <div class="buttons">
+        <div class="sign-player">
+            <!-- <img src="images/paper_icon.svg"> -->
+        </div>
         <button class="rock">ROCK</button>
         <button class="paper">PAPER</button>
         <button class="scissors">SCISSOR</button>
+        <div class="sign-cpu">
+            <!-- <img src="images/rock_icon.svg"> -->
+        </div>
     </div>
+    <div class="result"></div>
 
     <script src="rps.js"></script>
 </body>
