added signs to game

--- a/index.html
+++ b/index.html
@@ -27,15 +27,11 @@
         </div>
     </div>
     <div class="buttons">
-        <div class="sign-player">
-            <!-- <img src="images/paper_icon.svg"> -->
-        </div>
+        <div class="sign-player"></div>
         <button class="rock">ROCK</button>
         <button class="paper">PAPER</button>
         <button class="scissors">SCISSOR</button>
-        <div class="sign-cpu">
-            <!-- <img src="images/rock_icon.svg"> -->
-        </div>
+        <div class="sign-cpu"></div>
     </div>
     <div class="result"></div>
 
